[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "turbo-queue"
version = "0.1.1"
authors = [
  { name="Dave Waters", email="dave@1waters.com" },
]
description = "A Python module to improve performance of multiprocessing queues"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/davewat/turbo-queue"
"Bug Tracker" = "https://github.com/davewat/turbo-queue/issues"